# erp_inventory_api

./: README.md  pyproject.toml  settings-dev.toml  settings.toml
src/: app_config.py  main.py
